--- a/crypto-dash/package.json
+++ b/crypto-dash/package.json
@@ -14,14 +14,21 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@types/express": "^4.17.13",
+    "express": "^4.17.1",
+    "ts-node-dev": "^1.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:server": "cd server && ts-node-dev --respawn --transpile-only ./server.ts && wait-on tcp:5000",
+    "start:app": "react-scripts start",
+    "start": "run-p --race start:server start:app",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000/",
+  "type": "module",
   "eslintConfig": {
     "extends": [
       "react-app",
