--- a/crypto-dash/package.json
+++ b/crypto-dash/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@terra-money/wallet-provider": "^3.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "@types/express": "^4.17.13",
-    "express": "^4.17.1",
-    "ts-node-dev": "^1.1.8"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start:server": "cd server && ts-node-dev --respawn --transpile-only ./server.ts && wait-on tcp:5000",
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@terra-money/terra.js": "^3.0.1"
   }
 }
