--- a/crypto-dash/tsconfig.json
+++ b/crypto-dash/tsconfig.json
@@ -13,7 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "target": "esnext",
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -22,5 +22,6 @@
   },
   "include": [
     "src",
-    "server.ts"  ]
+    "server.ts"
+  ]
 }
