--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.5",
     "react-scripts": "4.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.2",
